# donde-toolkits

./: .bazelrc  .clang-format  .clangd  .gitattributes  .gitignore  BUILD  CMakeLists.txt  Dockerfile  Makefile  README.linux.md  README.md  README.win.md  README_mac_m1.md  WORKSPACE  cc_combine.bzl  cc_static_library.bzl
api/: common.pb.cc  feature_extract.grpc.pb.h  feature_search.grpc.pb.cc  feature_search.pb.cc  feature_search.pb.h  feature_search_inner.pb.cc
bazel/: installer.patch
brew/: ffmpeg.BUILD  opencv.BUILD  openvino.BUILD
cmake/: FindFFMPEG.cmake
conan/: conanfile.txt  conanprofile.linux  conanprofile.win
contrib/: face_extract_server.json  feature_search_manager.json  feature_search_worker.json  server.json
donde/: definitions.h  message.h  processor.h  utils.h
donde/feature_extract/: face_pipeline.h  processor.h  worker.h
donde/feature_search/: api.h  db_manager.h  db_searcher.h  definitions.h  driver.h
donde/search/: api.h  db_manager.h  driver.h
donde/search_manager/: api.h
examples/: CMakeLists.txt  feature_extract.cc  video_decode.cc
include/: #concurrent_processor.h#  concurrent_processor.h  detector_worker.h  face_pipeline.h  processor_worker.h  types.h  utils.h
include/donde/: definitions.h  message.h  utils.h
include/openvino_worker/: workers.h
include/search/: brute_force_search.h  engine.h  faiss_search.h  posix_backend.h  search_engine.h  searcher.h  storage.h  storage_backend.h
modules/common/: BUILD
modules/feature_extract/: BUILD
modules/feature_search/: BUILD
modules/video_process/: BUILD  CMakeLists.txt
modules/video_process/include/donde/video_process/: ffmpeg_processor.h  ffmpeg_processor_impl.h  processor.h  utils.h
modules/video_process/src/: ffmpeg_processor_impl.cc
proto/: CMakeLists.txt  build_gateway.sh  build_proto.sh  common.proto  feature_extract.proto  feature_search.proto  feature_search_inner.proto  server.proto
server/: CMakeLists.txt  README.md
server/api/pb/: server.grpc.pb.cc  server.grpc.pb.h  server.pb.cc  server.pb.h
server/config/: server.json
server/include/: config.h  face_service.h  feature_search.h
server/protos/: README.md  build_proto.sh  server.proto
server/source/: config.cpp  face_service.cpp  feature_search.cpp  main.cpp
servers/: CMakeLists.txt
servers/feature_extract/: config.h  face_service.cc  face_service.h  main.cc
servers/feature_extract/include/: face_service.h
servers/feature_extract/source/: config.cpp  face_service.cc  face_service.cpp  main.cpp
servers/feature_search/include/: config.h  coordinator.h  feature_search.h  remote_worker.h  shard_manager.h  worker_client.h
servers/feature_search/source/: feature_search.cpp  main.cpp
servers/feature_search_manager/: config.h  feature_search.cc  feature_search.h  main.cc
servers/feature_search_manager/include/: coordinator.h  feature_search.h  shard_manager.h  worker_api.h  worker_client.h
servers/feature_search_manager/source/: coordinator.cpp  feature_search.cc  feature_search.cpp  shard_manager.cpp  worker_client.cpp
servers/feature_search_worker/: config.h  feature_search_worker.cc  feature_search_worker.h  worker.cc  worker.h
servers/feature_search_worker/include/: config.h  worker.h
servers/feature_search_worker/source/: main.cc  main.cpp  worker.cc  worker.cpp
source/feature_search/: brute_force_searcher.cc  brute_force_searcher.h  cassandra_driver.cc  cassandra_driver.h  faiss_searcher.cc  faiss_searcher.h  feature_topk_rank.h  simple_driver.cc  simple_driver.h
source/pipeline/: face_pipeline.cc  face_pipeline.cpp  face_pipeline.h
source/processor/: aligner_worker.cpp  concurrent_processor.h  detector_worker.cpp  feature_worker.cpp  landmarks_worker.cpp  message.cpp
source/search/: brute_force_search.cpp  brute_force_searcher.cc  brute_force_searcher.h  cassandra_driver.cc  cassandra_driver.h  faiss_search.cpp  faiss_searcher.h  file_system_backend.cpp  file_system_storage.cpp  searcher.cpp  simple_driver.cc  simple_driver.h
source/search_manager/: coordinator_impl.cc  coordinator_impl.h  shard_impl.cc  shard_impl.h  shard_manager_impl.cc  shard_manager_impl.h  worker_impl.cc  worker_impl.h
src/feature_extract/: CMakeLists.txt  concurrent_processor.h  face_pipeline.cc  face_pipeline_impl.cc  face_pipeline_impl.h  processor_factory.cc  worker.h
src/feature_extract/include/donde/: message.h
src/feature_extract/openvino_worker/: aligner_worker.cc  detector_worker.cc  feature_worker.cc  landmarks_worker.cc  worker_openvino.h
src/feature_extract/pipeline/: face_pipeline_impl.cc  face_pipeline_impl.h
src/feature_extract/processor/: concurrent_processor_impl.h  worker_base_impl.h
src/feature_extract/processor/openvino_worker/: aligner_worker.cc  detector_worker.cc  feature_worker.cc  landmarks_worker.cc  workers_impl.h
src/feature_extract/src/: concurrent_processor.h  worker.h
src/feature_extract/src/openvino_worker/: openvino_worker.h
src/feature_identity/: CMakeLists.txt  identity_store.cc
src/feature_search/: cassandra_driver.cc  cassandra_driver.h  feature_topk_rank.h  simple_driver.cc  (+1 more)
test/: CMakeLists.txt
test/source/: face_pipeline.cpp
test/source/pipeline/: test_pipeline.cpp
test/source/processor/: test_processor.cpp
test/source/search/: brute_force_search.cpp  file_system_storage.cpp  searcher.cpp
tests/: CMakeLists.txt  CMakeLists.txt.doctest
tests/feature_extract/: mock_processor.h
tests/feature_extract/pipeline/: face_pipeline.cc  face_pipeline_impl.cc  test_pipeline.cc  test_pipeline.cpp
tests/feature_extract/processor/: concurrent_processor_impl.cc  test_processor.cc  test_processor.cpp
tests/feature_search/: brute_force_search.cc  brute_force_search.cpp  mock_shard_manager.h  mock_worker.h  searcher.cpp  shard.cc  shard.cpp  simple_driver.cc  simple_driver.cpp
tests/feature_search/search_manager/: shard_impl.cc
tests/feature_search/search_worker/: brute_force_search.cc  worker_client.cc
tests/feature_search_manager/: brute_force_search.cc  shard.cc
tests/feature_search_worker/: worker_client.cc  worker_client.cpp
(+158 files in other folders)
